[package]
name = "hexchat_api"
version = "0.1.1"
authors = ["ttappr <tmtappr@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "hexchat_api"
#crate-type = ["cdylib"]

[dependencies]
libc = "0.2.84"
backtrace = "0.3"
#lazy_static = "1.4"
#once_cell = "1.6"

[profile.release]
opt-level = "s"


