[package]
name = "hexchat-api"
version = "0.3.1"
authors = ["ttappr <tmtappr@gmail.com>"]
description = "A Rust API for HexChat plugin development"
documentation = "https://ttappr.github.io/hexchat-api/doc/hexchat_api/index.html"
repository = "https://github.com/ttappr/hexchat-api"
readme = "README.md"
exclude = [".idea", "docs"]
keywords = ["hexchat", "plugin", "irc", "chat"]
categories = ["api-bindings"]
license = "MIT"
edition = "2021"

[lib]
name = "hexchat_api"

[dependencies]
libc = "0.2.84"
backtrace = "0.3"
send_wrapper = "0.6.0"

[features]
### The "threadsafe" flag is enabled by default.
default = ["threadsafe"]

### Enabled by default, the threadsafe features are enabled. This gives 
### plugin authors access to ThreadSafeContext, ThreadSafeListIterator, 
### ThreadSafeHexchat and the `main_thread()` function for ensuring code is 
### executed on the main thread.
threadsafe = []
